--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -14,6 +14,7 @@
   "noHayServiciosDisponibles": "No servicios disponibles",
   "errorCargandoServicios":"Error cargando servicios:",
   "errorCargandoPerfil":"Error cargando Perfil",
+  "errorCargandoBarberia": "Error cargando barberia",
   "ubicacionServiciosDeshabilitados": "Servicios de ubicación deshabilitados",
   "ubicacionNoSePudoObtener": "No se pudo obtener ubicación:",
   "ubicacionLatLngFmt": "Lat {lat}, Lng {lng}",
@@ -23,10 +24,14 @@
   "errorGuardando": "Error guardando:",
   "ofrezcoDomicilio": "Ofrezco trabajo a domicilio",
   "direccionBaseLabel": "Dirección base (opcional)",
-   "radioKm": "Radio (km):",
-   "direccionLugarHolder": "Calle, nro, barrio…",
-   "usarmiubicacionctual": "Usar mi ubicación actual",
-   "selectorMapaPendiente": "Selector de mapa: pendiente",
+  "radioKm": "Radio (km):",
+  "direccionLugarHolder": "Calle, nro, barrio…",
+  "usarmiubicacionctual": "Usar mi ubicación actual",
+  "selectorMapaPendiente": "Selector de mapa: pendiente",
+  "barberiaNoEncontrada": "Barbería no encontrada",
+  "reservarExterno": "Reservar (externo)",
+  "verServicios": "Ver Servicios",
+
 
   "elegirEnMapa": "Elegir en mapa",
   "cambiarEnMapa": "Cambiar en mapa",
