--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,72 +1,72 @@
 {
-  "@@locale": "es",
-  "appTitle": "BarberiApp",
-  "bienvenida": "Bienvenido a BarberiApps",
-  "irAMapa": "Mapa Barberías",
-  "irABarberias": "Barberias", 
-  "irATurnos": "Ver turnos",
-  "irADomicilio": "Barberos a domicilio",
-  "soyBarbero": "Soy Barbero",
-  "soporte": "Soporte",
-  "servicios": "Servicios",
-  "buscarServicio": "Buscar servicio o barberia...",
-  "aDomicilio": "A domicilio",
-  "enBarberia": "A Barberia",
-  "noHayServiciosDisponibles": "No servicios disponibles",
-  "errorCargandoServicios":"Error cargando servicios:",
-  "errorCargandoPerfil":"Error cargando Perfil",
-  "errorCargandoBarberia": "Error cargando barberia",
-  "ubicacionServiciosDeshabilitados": "Servicios de ubicación deshabilitados",
-  "ubicacionNoSePudoObtener": "No se pudo obtener ubicación:",
-  "ubicacionLatLngFmt": "Lat {lat}, Lng {lng}",
-  "urlReservasInvalida": "URL de reservas inválida",
-  "debeDefinirUbicacionBase": "Para ofrecer a domicilio, define tu ubicación base",
-  "perfilActualizado": "Perfil actualizado",
-  "errorGuardando": "Error guardando:",
-  "ofrezcoDomicilio": "Ofrezco trabajo a domicilio",
-  "direccionBaseLabel": "Dirección base (opcional)",
-  "radioKm": "Radio (km):",
-  "direccionLugarHolder": "Calle, nro, barrio…",
-  "usarmiubicacionctual": "Usar mi ubicación actual",
-  "selectorMapaPendiente": "Selector de mapa: pendiente",
-  "barberiaNoEncontrada": "Barbería no encontrada",
-  "reservarExterno": "Reservar (externo)",
-  "verServicios": "Ver Servicios",
+"@@locale": "es",
+"appTitle": "BarberiApp",
+"bienvenida": "Bienvenido a BarberiApps",
+"irAMapa": "Mapa Barberías",
+"irABarberias": "Barberias", 
+"irATurnos": "Ver turnos",
+"irADomicilio": "Barberos a domicilio",
+"soyBarbero": "Soy Barbero",
+"soporte": "Soporte",
+"servicios": "Servicios",
+"buscarServicio": "Buscar servicio o barberia...",
+"aDomicilio": "A domicilio",
+"enBarberia": "A Barberia",
+"noHayServiciosDisponibles": "No servicios disponibles",
+"errorCargandoServicios":"Error cargando servicios:",
+"errorCargandoPerfil":"Error cargando Perfil",
+"errorCargandoBarberia": "Error cargando barberia",
+"ubicacionServiciosDeshabilitados": "Servicios de ubicación deshabilitados",
+"ubicacionNoSePudoObtener": "No se pudo obtener ubicación:",
+"ubicacionLatLngFmt": "Lat {lat}, Lng {lng}",
+"urlReservasInvalida": "URL de reservas inválida",
+"debeDefinirUbicacionBase": "Para ofrecer a domicilio, define tu ubicación base",
+"perfilActualizado": "Perfil actualizado",
+"errorGuardando": "Error guardando:",
+"ofrezcoDomicilio": "Ofrezco trabajo a domicilio",
+"direccionBaseLabel": "Dirección base (opcional)",
+"radioKm": "Radio (km):",
+"direccionLugarHolder": "Calle, nro, barrio…",
+"usarmiubicacionctual": "Usar mi ubicación actual",
+"selectorMapaPendiente": "Selector de mapa: pendiente",
+"barberiaNoEncontrada": "Barbería no encontrada",
+"reservarExterno": "Reservar (externo)",
+"verServicios": "Ver Servicios",
 
 
-  "elegirEnMapa": "Elegir en mapa",
-  "cambiarEnMapa": "Cambiar en mapa",
+"elegirEnMapa": "Elegir en mapa",
+"cambiarEnMapa": "Cambiar en mapa",
 
 
-  "redesSocialesTitulo": "Redes sociales",
-  "instagramLabel": "Instagram",
-  "instagramHint": "https://instagram.com/mi_usuario",
-  "whatsappLabel": "WhatsApp",
-  "whatsappHint": "+5989xxxxxxx",
-  "facebookLabel": "Facebook",
-  "facebookHint": "https://facebook.com/mi_pagina",
-  "tiktokLabel": "TikTok",
-  "tiktokHint": "https://www.tiktok.com/@mi_usuario",
+"redesSocialesTitulo": "Redes sociales",
+"instagramLabel": "Instagram",
+"instagramHint": "https://instagram.com/mi_usuario",
+"whatsappLabel": "WhatsApp",
+"whatsappHint": "+5989xxxxxxx",
+"facebookLabel": "Facebook",
+"facebookHint": "https://facebook.com/mi_pagina",
+"tiktokLabel": "TikTok",
+"tiktokHint": "https://www.tiktok.com/@mi_usuario",
 
-  "appReservasTitulo": "App de reservas",
-  "proveedorLabel": "Proveedor",
-  "proveedorNinguna": "Ninguna",
-  "proveedorOtra": "Otra",
+"appReservasTitulo": "App de reservas",
+"proveedorLabel": "Proveedor",
+"proveedorNinguna": "Ninguna",
+"proveedorOtra": "Otra",
 
-  "urlReservasLabel": "URL de reservas",
-  "urlReservasHintWeiBook": "https://weibook.uy/tu_barber",
-  "urlReservasHintOtra": "https://mi-reservas.com/usuario",
+"urlReservasLabel": "URL de reservas",
+"urlReservasHintWeiBook": "https://weibook.uy/tu_barber",
+"urlReservasHintOtra": "https://mi-reservas.com/usuario",
 
-  "guardarBtn": "Guardar",
+"guardarBtn": "Guardar",
 
-  "barberoAuthTitulo": "Acceso para barbero",
-  "iniciarSesion": "Iniciar sesión",
-  "continuarConGoogle": "Continuar con Google",
-  "continuarConApple": "Continuar con Apple",
-  "cerrarSesion": "Cerrar sesión",
-  "ingresoExitoso": "Ingreso exitoso",
-  "errorAutenticando": "Error autenticando",
-  "registrarme": "Registrarme",
+"barberoAuthTitulo": "Acceso para barbero",
+"iniciarSesion": "Iniciar sesión",
+"continuarConGoogle": "Continuar con Google",
+"continuarConApple": "Continuar con Apple",
+"cerrarSesion": "Cerrar sesión",
+"ingresoExitoso": "Ingreso exitoso",
+"errorAutenticando": "Error autenticando",
+"registrarme": "Registrarme",
 
 
 "emailInvalido": "Email inválido",
@@ -106,8 +106,11 @@
 "duracionTurnoMin": "Duración del turno (min)",
 "diasAGenerarLabel": "Días a generar (1-31)",
 "diasAGenerarHelper": "Máximo 31 días para controlar la suscripción mensual",
-"generar": "Generar"
-
-
- 
+"generar": "Generar",
+"panelBarberoTitulo": "Panel barbero",
+"misBarberias": "Mis barberías",
+"configurarMiBarberia": "Configurar mi barbería",
+"turnos": "Turnos",
+"miPerfil": "Mi perfil",
+"cerrarSesion": "Cerrar sesión" 
 }
