--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -32,6 +32,7 @@
 "barberiaNoEncontrada": "Barbería no encontrada",
 "reservarExterno": "Reservar (externo)",
 "verServicios": "Ver Servicios",
+"verPerfil": "Ver Perfil",
 
 
 "elegirEnMapa": "Elegir en mapa",
@@ -117,5 +118,8 @@
 "configurarMiBarberiaTitulo": "Configurar mi barbería",
 "sinBarberiasVinculadas": "Aún no tenés barberías vinculadas",
 "crearMiBarberia": "Crear mi barbería",
-"solicitarVinculoProximamente": "Solicitar vínculo (próximamente)"
+"solicitarVinculoProximamente": "Solicitar vínculo (próximamente)",
+
+"noPudimosCargarBarberias": "No pudimos cargar las barberías",
+"verEnMapa": "Ver en mapa"
 }
