--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -215,5 +215,6 @@
   "fieldCelularError": "Ingresá tu celular",
   "fieldEmailOptional": "Email (opcional)",
   "snackReservaConfirmada": "¡Reserva confirmada!",
-  "snackReservaError": "No se pudo reservar: {error}"
+  "snackReservaError": "No se pudo reservar: {error}",
+  "oContinuarCon": "o continuar con"
 }
